<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_new_recipe"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_new_recipe" />
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_shopping_list" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>
</menu>