<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_recipes">

    <fragment
        android:id="@+id/nav_recipes"
        android:name="io.terence.recipesapp.ui.recipes.RecipesFragment"
        android:label="@string/menu_recipes"
        tools:layout="@layout/fragment_recipes" >
        <action
            android:id="@+id/action_nav_recipes_to_nav_new_recipe"
            app:destination="@id/nav_new_recipe">
            <argument
                android:name="recipeId"
                android:defaultValue="1"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_new_recipe"
        android:name="io.terence.recipesapp.ui.reflow.NewRecipeFragment"
        android:label="@string/menu_new_recipe"
        tools:layout="@layout/fragment_new_recipe" >
        <argument
            android:name="recipeId"
            app:argType="integer"
            android:defaultValue="-1" />
        <action
            android:id="@+id/action_nav_new_recipe_to_nav_recipes"
            app:destination="@id/nav_recipes" />
    </fragment>

    <fragment
        android:id="@+id/nav_shopping_list"
        android:name="io.terence.recipesapp.ui.slideshow.ShoppingListFragment"
        android:label="@string/menu_shopping_list"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="io.terence.recipesapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_search"
        android:name="io.terence.recipesapp.ui.search.SearchFragment"
        android:label="Search Recipes"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_nav_search_to_nav_new_recipe"
            app:destination="@id/nav_new_recipe" />
    </fragment>
</navigation>